--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-numpy==1.18.1
-pandas==0.25.3
-python-dateutil==2.8.2
-pytz==2021.3
-scipy==1.4.1
-simplejson==3.17.5
-six==1.16.0
+numpy
+pandas
+pytz
+scipy
+simplejson
