--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "izumi-pyhees"
+name = "izumipyhees"
 version = "0.0.1"
 license = { file = "LICENSE" }
 requires-python = ">=3.10"
